--- a/aboutme.html
+++ b/aboutme.html
@@ -42,74 +42,31 @@
 
 
         <div class="row ww-options">
-            <div class="col-sm-4">
-                <h4> Hey there!<br><br>What are you in the mood for in Seattle?</h4>
-
-                <div id="coffee" class="ww-slider">
-                    <label for="amount1">Coffee</label>
-                    <input type="text" id="amount1" readonly style="border:0; color:#f6931f; font-weight:bold;">
-                    <div id="slider1"></div>
-                </div>
-
-                <div class="ww-slider">
-                    <label for="amount2">Bars and Nightlife</label>
-                    <input type="text" id="amount2" readonly style="border:0; color:#f6931f; font-weight:bold;">
-                    <div id="slider2"></div>
-                </div>
-                <div class="ww-slider">
-                    <label for="amount3">Asian Food</label>
-                    <input type="text" id="amount3" readonly style="border:0; color:#f6931f; font-weight:bold;">
-                    <div id="slider3"></div>
+            <div class="col-sm-4 profile-img">
+                <img src="./img/deason.png" width="240" height="257" /><br>
+                <div class="social-icons">
+                    <a href="http://linkedin.com/in/tdeason416"><img src="./img/linkedin.png" /></a>
+                    <a href="http://github.com/tdeason416 "> <img src="./img/github.png" /></a>
                 </div>
             </div>
             <div class="col-sm-8">
-                <div id="mapDev" class="mapDev"></div>
+                <h2> Travis R. Deason</h2>
+                <h4> Data Scientist</h4>
+                <p> Hi, I'm a Data Scientist with a Mechanical Engineer background living in Seattle, WA. 
+                    About a year ago I started to dig deep into Data Science because I felt I could better apply my quantitative and analysis skills. 
+                </p>
+                <p>
+                    I love travelling but like most Americans have limited time off.
+                    I believe when you have just a few days in a city, you can't afford to waste time. 
+                    Travel and review sites are nice, but they don't give you a feel of what you're looking for in a city.
+                     I've created WanderWell to help travellers make data-driven travel decisions.
+                </p>
             </div>
         </div>
 
     </div>
 
 
-    <script type="text/javascript">
-        var mapCanvasCount = document.getElementById("mapDev");
-        var d3GoogleMap = new D3Mapping.D3GoogleMap(47.6062, -122.3321, mapCanvasCount);
-
-        $("#amount1").val(5);
-
-        $(function () {
-            $("#slider1").slider({
-                range: "max",
-                min: 0,
-                max: 10,
-                value: 5,
-                slide: function (event, ui) {
-                    $("#amount1").val(ui.value);
-                    d3GoogleMap.setOpacity(ui.value * 0.1);
-                }
-            });
-            $("#slider2").slider({
-                range: "max",
-                min: 0,
-                max: 10,
-                value: 0,
-                slide: function (event, ui) {
-                    $("#amount2").val(ui.value);
-                }
-            });
-            $("#slider3").slider({
-                range: "max",
-                min: 0,
-                max: 10,
-                value: 0,
-                slide: function (event, ui) {
-                    $("#amount3").val(ui.value);
-                }
-            });
-
-            data = "";
-            // var mapCanvasCount = document.getElementById("mapDev");
-        });
-    </script>
 </body>
 
 </html>
